kubernetes/redis/redis-server.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-server
  labels:
    app: redis
    role: server
    tier: backend
spec:
  selector:
    matchLabels:
      app: redis
      role: server
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: server
        tier: backend
    spec:
      containers:
        - name: server
          image: k8s.gcr.io/redis:e2e # or just image: redis
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          ports:
            - name: redis-port
              containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
    role: server
    tier: backend
  type: NodePort
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 32379
